# zodipy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  sitemap.xml  tox.ini
.github/workflows/: coverage.yml  draft-pdf.yml  mkdocs-deploy.yml  publish.yml  tests.yml  uv-tests.yml
_docs/: conf.py  index.rst  introduction.rst  reference.rst
_docs/_build/doctrees/: environment.pickle  index.doctree  introduction.doctree  reference.doctree
_docs/_build/doctrees/reference/: zodipy.doctree
_docs/_build/html/: genindex.html  index.html  introduction.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
_docs/_build/html/_modules/: index.html
_docs/_build/html/_modules/zodipy/: zodipy.html
_docs/_build/html/reference/: zodipy.html
_docs/reference/: zodipy.rst
docs/: conf.py  index.md  index.rst  install.md  introduction.md  introduction.rst  reference.md  reference.rst  requirements.txt  tutorials.rst  usage.md
docs/_build/doctrees/: environment.pickle  index.doctree  introduction.doctree  reference.doctree  tutorials.doctree
docs/_build/doctrees/reference/: components.doctree  models.doctree  zodipy.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  introduction.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/zodipy/: _component.html  _components.html  _model.html  zodipy.html
docs/_build/html/_sources/: index.rst.txt  introduction.rst.txt  reference.rst.txt
docs/_build/html/_sources/reference/: components.rst.txt  zodipy.rst.txt
docs/_build/html/_static/css/: custom.css
docs/_build/html/reference/: components.html  models.html  zodipy.html
docs/examples/: astropy_healpix_map.py  bandpass.py  component_maps.py  ecliptic_scan.py  evaluate.py  get_bandpass_integrated_emission.py  get_binned_emission.py  get_binned_emission_solar_cutoff.py  get_binned_gal_emission.py  get_comp_binned_emission.py  get_density_contour.py  get_emission_ang.py  get_parallel_emission.py  healpy_map.py  number_density.py  parallel.py
docs/reference/: models.rst
docs/stylesheets/: extra.css
examples/: astropy_healpix_map.py  component_maps.py  get_bandpass_integrated_emission.py  get_binned_emission_solar_cutoff.py  get_binned_gal_emission.py  get_comp_binned_emission.py  get_density_contour.py  get_emission_ang.py  get_parallel_emission.py  healpy_map.py
install/: index.html
introduction/: index.html
javascripts/: mathjax.js
paper/: paper.bib  paper.md
reference/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: _helpers.py  _strategies.py  _tabulated_dirbe.py  _test_get_emission.py  _test_tabulated_density.py  _test_validators.py  conftest.py  dirbe_tabulated.py  strategies.py  test_brightness_integral.py  test_evaluate.py  test_functions.py  test_get_emission.py  test_model.py  test_model_registry.py  test_params.py  test_reprs.py  test_source_functions.py  test_tabulated_density.py  test_unit_get_emission.py  test_validators.py  test_zodipy.py
usage/: index.html
zodipy/: __init__.py  _astroquery.py  _bandpass.py  _brightness_integral.py  _color.py  _component.py  _component_label.py  _component_labels.py  _components.py  _constants.py  _contour.py  _coordinates.py  _coords.py  _decorators.py  _dirbe.py  _dirbe_bandpass.py  _emission.py  _emissivities.py  _emissivity.py  _ephemeris.py  _exceptions.py  _functions.py  _integral.py  _integration.py  _integration_config.py  _interp.py  _interpolate_source.py  _ipd_component.py  _ipd_comps.py  _ipd_dens_funcs.py  _ipd_model.py  _labels.py  _line_of_sight.py  _los_config.py  _model.py  _simulation.py  _sky_coords.py  _solar_flux.py  _solar_irradiance.py  _solar_irradiance_model.py  (+51 more)
zodipy/data/: __init__.py  emissivities.py  models.py  parameters.py
zodipy/dirbe/scripts/: dirbe_time_position.py
zodipy/fitting/: __init__.py  emcee_test.py  evaluate_likelihood.py  fit_emissivities.py  fit_template.py  save_timestreams.py
