[tool.poetry]
name = "zodipy"
homepage = "https://github.com/Cosmoglobe/zodipy"
version = "0.9.0"
description = "Software for simulating zodiacal emission"
authors = ["Metin San <metinisan@gmail.com>"]
readme = "README.md"
license = "GPL-3.0"
exclude = ["test.py"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = [
    "astronomy",
    "astrophysics",
    "cosmology",
    "space",
    "science",
]


[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.26.4"
healpy = "^1.16.6"
astropy = ">=5.0.1"
jplephem = "^2.17"
scipy = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0"
mkdocs = "^1.5.3"
pymdown-extensions = "^9.4"
markdown-include = "^0.6.0"
pre-commit = "^2.19.0"
coverage = "^7.1.0"
pytest-cov = "^4.0.0"
mkdocs-material = "^9.0.1"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"
ruff = "^0.3.7"
markdown = "<3.4.0"
hypothesis = "^6.99.11"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = ["misc"]
plugins = "numpy.typing.mypy_plugin"
overrides = [
    { module = "healpy.*", ignore_missing_imports = true },
    { module = "astropy.*", ignore_missing_imports = true },
    { module = "scipy.*", ignore_missing_imports = true },
    { module = "pkg_resources.*", ignore_missing_imports = true },
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore:.*overflow encountered in expm1.*",
]

[tool.ruff]
lint.select = [
    "F", 
    "D", 
    "F", 
    "E", 
    "W", 
    "C", 
    "B", 
    "I", 
    "YTT", 
    "ANN", 
    "S", 
    "BLE", 
    "A", 
    "C4", 
    "EM", 
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "Q",
    "RET",
    "SIM",
    "PLR",
    "PLW",
    "TRY",
    "RUF",
]
line-length = 100
lint.ignore = [
    "B905",
    "D100",
    "D104",
    "D105",
    "D107",
    "ANN101",
    "PLR0913",
    "ISC001"
]
exclude = ["tests/*", "docs/*"]
lint.pydocstyle.convention = "google"