[project]
name = "zodipy"
version = "1.1.2"
description = "A Python package for zodiacal light simulations"
authors = [{ name = "Metin San", email = "metinisan@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
    "astronomy",
    "astrophysics",
    "cosmology",
    "space",
    "science",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engingiteering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.26.4,<2",
    "astropy>=5.0.1",
    "jplephem>=2.17,<3",
    "scipy>=1.13.0,<2",
]

[project.urls]
documentation = "https://cosmoglobe.github.io/zodipy/"
repository = "https://github.com/cosmoglobe/zodipy"

[dependency-groups]
dev = [
    "pytest>=7.2.1,<8",
    "mypy>=1.0,<2",
    "mkdocs>=1.5.3,<2",
    "pymdown-extensions>=10.8.1,<11",
    "markdown-include>=0.8.1,<0.9",
    "pre-commit>=2.19.0,<3",
    "coverage>=7.1.0,<8",
    "pytest-cov>=4.0.0,<5",
    "mkdocs-material>=9.5.21,<10",
    "mkdocstrings>=0.25.1,<0.26",
    "mkdocstrings-python>=1.7.3,<2",
    "ruff>=0.3.7,<0.4",
    "markdown>=3.6.0,<4",
    "hypothesis>=6.99.11,<7",
    "healpy>=1.17.1,<2",
    "astropy-healpix>=1.0.3,<2",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""
source-exclude = ["test.py"]
wheel-exclude = ["test.py"]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
disable_error_code = ["misc"]
plugins = "numpy.typing.mypy_plugin"
overrides = [
    { module = "astropy.*", ignore_missing_imports = true },
    { module = "astropy_healpix.*", ignore_missing_imports = true },
    { module = "scipy.*", ignore_missing_imports = true },
    { module = "pkg_resources.*", ignore_missing_imports = true },
]
exclude = ["_contour.py"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore:.*overflow encountered in expm1.*",
]

[tool.ruff]
lint.select = [
    "F", 
    "D", 
    "F", 
    "E", 
    "W", 
    "C", 
    "B", 
    "I", 
    "YTT", 
    "ANN", 
    "S", 
    "BLE", 
    "A", 
    "C4", 
    "EM", 
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "Q",
    "RET",
    "SIM",
    "PLR",
    "PLW",
    "TRY",
    "RUF",
    "NPY201"
]
lint.ignore = [
    "B905",
    "D100",
    "D104",
    "D105",
    "D107",
    "ANN101",
    "PLR0913",
    "ISC001",
    "S311",
]
lint.pydocstyle.convention = "google"
line-length = 100
exclude = ["work_in_progress/*"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"docs/*" = ["INP001", "T201", "S101"]
